# data-engineering-zoomcamp

./: README.md
module-1/docker/: 07-Packaged-using-Docker-And-Connect.md
module-1/docker/pipeline/: docker-compose.yaml  ingest_data.py  pyproject.toml
module-1/terraform/: README.md
module2/flows/: run-kestra.md
