[project]
name = "project-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "psycopg[binary,pool]>=3.3.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
    "tzdata==2025.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
